--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>VideoChat WebRTC</title>
         <script src="socket.io/socket.io.js"></script>
         <link rel="stylesheet" href="styles.css">
