--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>VideoChat WebRTC</title>
         <script src="socket.io/socket.io.js"></script>
         <link rel="stylesheet" href="styles.css">
